src/components/search-select/search-select.css
.dc-search-select {
  --button-height: 36px;
  --button-padding-left: 12px;
  --button-slot-width: 32px;
  --button-font-size: 14px;
  --button-font-weight: 400;
  --button-line-height: 20px;
  --button-color: var(--dc-neutral-900);
  --button-background: var(--dc-white);
  --button-border-width: 1px;
  --button-border-style: solid;
  --button-border-color: var(--dc-neutral-300);
  --button-border-color-error: var(--dc-red-500);
  --button-border-radius: 7px;
  --button-focus-ring-color: var(--dc-focus-ring-color);
  --popup-min-width: 240px;
  --popup-max-width: 720px;
  --popup-offset: 4px;
  --popup-color: var(--dc-neutral-900);
  --popup-background: var(--dc-white);
  --popup-border-width: 1px;
  --popup-border-style: solid;
  --popup-border-color: var(--dc-neutral-300);
  --popup-border-radius: 7px;
  --popup-shadow:
    0 2px 4px 0 rgb(var(--dc-neutral-950-rgb) / 5%),
    0 2px 10px 0 rgb(var(--dc-neutral-950-rgb) / 10%);
  --input-padding: 8px 12px;
  --input-font-size: 14px;
  --input-font-weight: 400;
  --input-line-height: 1;
  --input-border-width: 1px;
  --input-border-style: solid;
  --input-border-color: var(--dc-neutral-300);
  --list-box-max-height: 256px;
  --list-box-padding: 4px;
  --option-padding: 4px 8px;
  --option-font: var(--dc-text-sm);
  --option-scroll-margin-block: 4px;
  --option-scroll-border-radius: 4px;
  --option-color: var(--dc-neutral-900);
  --option-background: none;
  --option-color-selected: var(--dc-neutral-950);
  --option-background-selected: rgb(var(--dc-neutral-950-rgb) / 12%);
  --option-color-checked: var(--dc-white);
  --option-background-checked: var(--dc-blue-500);
  --option-label-font: 600 var(--dc-text-sm);
  --option-label-color: inherit;
  --option-caption-font: var(--dc-text-sm);
  --option-caption-color: inherit;
  --empty-state-padding: 16px;
  --empty-state-font: var(--dc-text-sm);
  --empty-state-text-align: center;
  --empty-state-color: var(--dc-neutral-600);
  --empty-state-color-error: var(--dc-red-600);

  position: relative;
  box-sizing: border-box;
  display: inline-flex;
  font-family: var(--dc-primary-font);
  color-scheme: light;
}

.dc-search-select_full-width {
  display: flex;
  width: 100%;
}

.dc-search-select__button {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  width: 100%;
  height: var(--button-height);
  padding: 0;
  font-size: var(--button-font-size);
  font-weight: var(--button-font-weight);
  line-height: var(--button-line-height);
  color: var(--button-color);
  text-align: left;
  cursor: default;
  background: var(--button-background);
  border: var(--button-border-width) var(--button-border-style)
    var(--button-border-color);
  border-radius: var(--button-border-radius);
}

.dc-search-select__button[data-invalid="true"] {
  --button-border-color: var(--button-border-color-error);
}

.dc-search-select__button:focus,
.dc-search-select__button[aria-expanded="true"] {
  --button-border-color: var(--button-focus-ring-color);

  outline: 1px solid var(--button-focus-ring-color);
}

.dc-search-select__button:disabled {
  opacity: var(--dc-disabled-state-opacity);
}

.dc-search-select__button_size_sm {
  --button-font-size: 13px;
  --button-height: 32px;
  --button-padding-left: 8px;
  --button-slot-width: 28px;
  --button-border-radius: 6px;
}

.dc-search-select__button_size_lg {
  --button-font-size: 15px;
  --button-height: 40px;
  --button-padding-left: 16px;
  --button-slot-width: 40px;
  --button-border-radius: 8px;
}

.dc-search-select__button-label {
  flex-grow: 1;
}

.dc-search-select__button-label:first-child {
  padding-left: var(--button-padding-left);
}

.dc-search-select__button-slot {
  display: inline-flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: center;
  width: var(--button-slot-width);
}

.dc-search-select__caret {
  opacity: 0.65;
  transform: translateY(10%);
}

.dc-search-select__popup {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  min-width: var(--popup-min-width);
  max-width: var(--popup-max-width);
  margin-top: var(--popup-offset);
  overflow: hidden;
  color: var(--popup-color);
  background: var(--popup-background);
  border: var(--popup-border-width) var(--popup-border-style)
    var(--popup-border-color);
  border-radius: var(--popup-border-radius);
  box-shadow: var(--popup-shadow);
}

.dc-search-select__input {
  box-sizing: border-box;
  width: 100%;
  padding: var(--input-padding);
  margin: 0;
  font-family: inherit;
  font-size: var(--input-font-size);
  font-weight: var(--input-font-weight);
  line-height: var(--input-line-height);
  appearance: none;
  background: none;
  border: none;
  border-bottom: var(--input-border-width) var(--input-border-style)
    var(--input-border-color);
}

.dc-search-select__input::placeholder {
  color: inherit;
  opacity: 0.4;
}

.dc-search-select__input:focus {
  outline: none;
}

.dc-search-select__content {
  font: var(--dc-text-sm);
}

.dc-search-select__list-box {
  box-sizing: border-box;
  display: grid;
  max-height: var(--list-box-max-height);
  padding: var(--list-box-padding);
  margin: 0;
  overflow-y: auto;
  overscroll-behavior: contain;
  contain: content;
  list-style: none;
  scrollbar-width: thin;
}

.dc-search-select__option {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: var(--option-padding);
  font: var(--option-font);
  color: var(--option-color);
  cursor: default;
  scroll-margin-top: var(--option-scroll-margin-block);
  scroll-margin-bottom: var(--option-scroll-margin-block);
  background: var(--option-background);
  border-radius: var(--option-scroll-border-radius);
}

.dc-search-select__option[aria-selected="true"] {
  color: var(--option-color-selected);
  background: var(--option-background-selected);
}

.dc-search-select__option[aria-checked="true"] {
  color: var(--option-color-checked);
  background: var(--option-background-checked);
}

.dc-search-select__option-label {
  font: var(--option-label-font);
  color: var(--option-label-color);
}

.dc-search-select__option-caption {
  font: var(--option-caption-font);
  color: var(--option-caption-color);
}

.dc-search-select__empty-state {
  box-sizing: border-box;
  padding: var(--empty-state-padding);
  font: var(--empty-state-font);
  color: var(--empty-state-color);
  text-align: var(--empty-state-text-align);
}

.dc-search-select__empty-state_error {
  color: var(--empty-state-color-error);
}

